minio/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-headless
  namespace: minio
  labels:
    app.kubernetes.io/name: mi
    app.kubernetes.io/instance: mi
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: minio
      port: 9000
      targetPort: minio
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mi
    app.kubernetes.io/instance: mi
---
apiVersion: v1
kind: Service
metadata:
  name: mi
  namespace: minio
  labels:
    app.kubernetes.io/name: mi
    app.kubernetes.io/instance: mi
spec:
  type: ClusterIP
  ports:
    - name: minio
      port: 9000
      targetPort: minio
  selector:
    app.kubernetes.io/name: mi
    app.kubernetes.io/instance: mi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mi
  namespace: minio
  labels:
    app.kubernetes.io/name: mi
    app.kubernetes.io/instance: mi
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mi
      app.kubernetes.io/instance: mi
  serviceName: mi-headless
  replicas: 3
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mi
        app.kubernetes.io/instance: mi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/minio/v2/metrics/cluster"
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mi
                    app.kubernetes.io/instance: mi
                namespaces:
                  - "minio"
                topologyKey: kubernetes.io/hostname
              weight: 100
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: minio
                    operator: In
                    values:
                      - "yes"
      securityContext:
        fsGroup: 1001
      containers:
        - name: minio
          # image: quay.io/bitnami/minio:2021.6.17-debian-10-r14
          ## Fix to new container version
          image: bitnami/minio:2023.5.4-debian-11-r1
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: minio
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: minio
              scheme: "HTTP"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: minio
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              memory: "145Mi"
              cpu: "25m"
            limits:
              memory: "180Mi"
              cpu: "160m"
          volumeMounts:
            - mountPath: /data-0
              name: data-0
            - mountPath: /data-1
              name: data-1
            - mountPath: /data-2
              name: data-2
      volumes:
        - hostPath:
            path: /var/data-0
            type: DirectoryOrCreate
          name: data-0
        - hostPath:
            path: /var/data-1
            type: DirectoryOrCreate
          name: data-1
        - hostPath:
            path: /var/data-2
            type: DirectoryOrCreate
          name: data-2
---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: minio
  labels:
    name: console
spec:
  ports:
    - port: 9090
      name: http
    - port: 9443
      name: https
  selector:
    app: console
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console
          # image: minio/console:v0.7.5
          ## Fix to new container version
          image: minio/console:v0.29.0
          imagePullPolicy: "IfNotPresent"
          args:
            - server
          ports:
            - containerPort: 9090
              name: http
          resources:
            requests:
              memory: "145Mi"
              cpu: "25m"
            limits:
              memory: "180Mi"
              cpu: "160m"
